HDPI-352: Implemented review comments